--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -587,10 +587,10 @@
   <string name="RegistrationActivity_country_code_description">Código de país</string>
   <string name="RegistrationActivity_call">Chamar</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Fotografía</string>
-  <string name="RevealableMessageView_view_video">Vídeo</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Fotografía</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Vídeo</string> -->
   <string name="RevealableMessageView_viewed">Vista</string>
-  <string name="RevealableMessageView_media">Ficheiros multimedia</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Ficheiros multimedia</string> -->
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Erro ao gardar os cambios na imaxe</string>
   <!--Search-->
@@ -652,8 +652,8 @@
   <string name="ThreadRecord_missed_call">Chamada perdida</string>
   <string name="ThreadRecord_media_message">Mensaxe multimedia</string>
   <string name="ThreadRecord_sticker">Adhesivo</string>
-  <string name="ThreadRecord_view_once_photo">Desaparición das fotografías</string>
-  <string name="ThreadRecord_view_once_video">Desaparición do vídeo</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Desaparición das fotografías</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Desaparición do vídeo</string> -->
   <string name="ThreadRecord_s_is_on_signal">%s está en Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Desaparición das mensaxes desactivada</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Desaparición das mensaxes establecida en%s</string>
@@ -732,8 +732,8 @@
   <string name="MessageNotifier_mark_read">Marcar como lida</string>
   <string name="MessageNotifier_media_message">Mensaxe multimedia</string>
   <string name="MessageNotifier_sticker">Adhesivo</string>
-  <string name="MessageNotifier_view_once_photo">Desaparición das fotografías</string>
-  <string name="MessageNotifier_view_once_video">Desaparición do vídeo</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Desaparición das fotografías</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Desaparición do vídeo</string> -->
   <string name="MessageNotifier_reply">Responder</string>
   <string name="MessageNotifier_signal_message">Mensaxe de Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS insegura</string>
@@ -871,7 +871,7 @@
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Vídeo</string>
   <string name="QuoteView_photo">Fotografía</string>
-  <string name="QuoteView_view_once_media">Mensaxe multimedia</string>
+  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Mensaxe multimedia</string> -->
   <string name="QuoteView_sticker">Adhesivo</string>
   <string name="QuoteView_document">Documento</string>
   <string name="QuoteView_you">Ti</string>
