--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -670,10 +670,10 @@
   <string name="RegistrationActivity_country_code_description">Šalies kodas</string>
   <string name="RegistrationActivity_call">Skambinti</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Nuotrauka</string>
-  <string name="RevealableMessageView_view_video">Vaizdo įrašai</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Nuotrauka</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Vaizdo įrašai</string> -->
   <string name="RevealableMessageView_viewed">Peržiūrėta</string>
-  <string name="RevealableMessageView_media">Medija</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Medija</string> -->
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nepavyko įrašyti paveikslo pakeitimų</string>
   <!--Search-->
@@ -735,8 +735,8 @@
   <string name="ThreadRecord_missed_call">Praleistas skambutis</string>
   <string name="ThreadRecord_media_message">Medijos žinutė</string>
   <string name="ThreadRecord_sticker">Lipdukas</string>
-  <string name="ThreadRecord_view_once_photo">Išnykstanti nuotrauka</string>
-  <string name="ThreadRecord_view_once_video">Išnykstantis vaizdo įrašas</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Išnykstanti nuotrauka</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Išnykstantis vaizdo įrašas</string> -->
   <string name="ThreadRecord_s_is_on_signal">%s atėjo į Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Išnykstančios žinutės išjungtos</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Išnykstančių žinučių laikas nustatytas į %s</string>
@@ -826,8 +826,8 @@
   <string name="MessageNotifier_mark_read">Žymėti kaip skaitytą</string>
   <string name="MessageNotifier_media_message">Medijos žinutė</string>
   <string name="MessageNotifier_sticker">Lipdukas</string>
-  <string name="MessageNotifier_view_once_photo">Išnykstanti nuotrauka</string>
-  <string name="MessageNotifier_view_once_video">Išnykstantis vaizdo įrašas</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Išnykstanti nuotrauka</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Išnykstantis vaizdo įrašas</string> -->
   <string name="MessageNotifier_reply">Atsakyti</string>
   <string name="MessageNotifier_signal_message">Signal žinutė</string>
   <string name="MessageNotifier_unsecured_sms">Neapsaugota SMS</string>
@@ -974,7 +974,7 @@
   <string name="QuoteView_audio">Garso įrašai</string>
   <string name="QuoteView_video">Vaizdo įrašai</string>
   <string name="QuoteView_photo">Nuotrauka</string>
-  <string name="QuoteView_view_once_media">Medijos žinutė</string>
+  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Medijos žinutė</string> -->
   <string name="QuoteView_sticker">Lipdukas</string>
   <string name="QuoteView_document">Dokumentas</string>
   <string name="QuoteView_you">Jūs</string>
