--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -658,10 +658,10 @@ furnizat (%s) este invalid.</string>
   <string name="RegistrationActivity_country_code_description">Prefixul țării</string>
   <string name="RegistrationActivity_call">Apelează</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Poză</string>
-  <string name="RevealableMessageView_view_video">Video</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Poză</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Video</string> -->
   <string name="RevealableMessageView_viewed">Vizualizată</string>
-  <string name="RevealableMessageView_media">Media</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Media</string> -->
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Salvarea modificărilor din imagine a eșuat</string>
   <!--Search-->
@@ -721,8 +721,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="ThreadRecord_missed_call">Apel nepreluat</string>
   <string name="ThreadRecord_media_message">Mesaj media</string>
   <string name="ThreadRecord_sticker">Autocolant</string>
-  <string name="ThreadRecord_view_once_photo">Poză care dispare</string>
-  <string name="ThreadRecord_view_once_video">Video care dispare</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_photo">Poză care dispare</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_disappearing_video">Video care dispare</string> -->
   <string name="ThreadRecord_s_is_on_signal">%s folosește Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Mesajele care dispar sunt dezactivate</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Timpul setat pentru mesajele care dispar este %s</string>
@@ -813,8 +813,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="MessageNotifier_mark_read">Marchează ca citit</string>
   <string name="MessageNotifier_media_message">Mesaj media</string>
   <string name="MessageNotifier_sticker">Autocolant</string>
-  <string name="MessageNotifier_view_once_photo">Poză care dispare</string>
-  <string name="MessageNotifier_view_once_video">Video care dispare</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_photo">Poză care dispare</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="MessageNotifier_disappearing_video">Video care dispare</string> -->
   <string name="MessageNotifier_reply">Răspunde</string>
   <string name="MessageNotifier_signal_message">Mesaj Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS nesecurizat</string>
@@ -961,7 +961,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Poză</string>
-  <string name="QuoteView_view_once_media">Mesaj media</string>
+  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Mesaj media</string> -->
   <string name="QuoteView_sticker">Autocolant</string>
   <string name="QuoteView_document">Document</string>
   <string name="QuoteView_you">Tu</string>
@@ -1135,7 +1135,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="message_details_header__issues_need_your_attention">Anumite probleme au nevoie de atenția dvs.</string>
   <string name="message_details_header__sent">Trimis</string>
   <string name="message_details_header__received">Primit</string>
-  <string name="message_details_header__disappears">Dispar</string>
+  <string name="message_details_header__disappears">Dispare</string>
   <string name="message_details_header__via">Prin</string>
   <string name="message_details_header__to">Către:</string>
   <string name="message_details_header__from">De la:</string>
