--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -569,9 +569,9 @@
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Ви отримаєте код підтвердження. Можливе списання з оператором</string>
   <string name="RegistrationActivity_call">Виклик</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Світлини</string>
-  <string name="RevealableMessageView_view_video">Відео</string>
-  <string name="RevealableMessageView_media">Медіа</string>
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_photo">Світлини</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_video">Відео</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="RevealableMessageView_outgoing_media">Медіа</string> -->
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Не вдалось змінити зображення</string>
   <!--Search-->
@@ -818,7 +818,7 @@
   <string name="QuoteView_audio">Аудіо</string>
   <string name="QuoteView_video">Відео</string>
   <string name="QuoteView_photo">Світлини</string>
-  <string name="QuoteView_view_once_media">Медіа повідомлення</string>
+  <!-- Removed by excludeNonTranslatables <string name="QuoteView_media">Медіа повідомлення</string> -->
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Ви</string>
   <string name="QuoteView_original_missing">Оригінальне повідомлення не знайдено</string>
