Update outgoing view-once message toast.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,7 +273,7 @@
     <string name="ConversationFragment_failed_to_open_message">Failed to open message</string>
     <string name="ConversationFragment_you_can_swipe_to_the_right_reply">You can swipe to the right on any message to quickly reply</string>
     <string name="ConversationFragment_you_can_swipe_to_the_left_reply">You can swipe to the left on any message to quickly reply</string>
-    <string name="ConversationFragment_view_once_message_are_not_stored_in_your_conversation_history">View-once messages are not stored in your conversation history</string>
+    <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Outgoing view-once media files are automatically removed after they are sent</string>
     <string name="ConversationFragment_you_already_viewed_this_message">You already viewed this message</string>
 
     <!-- ConversationListActivity -->
